2017-11-06  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE][GTK] Always use SET_AND_EXPOSE_TO_BUILD to set build variables
        https://bugs.webkit.org/show_bug.cgi?id=179038

        Reviewed by Žan Doberšek.

        * Source/cmake/OptionsGTK.cmake:
        * Source/cmake/OptionsWPE.cmake:

2017-11-03  Michael Catanzaro  <mcatanzaro@igalia.com>

        [WPE][GTK] Avoid duplicating code for dist and distcheck targets
        https://bugs.webkit.org/show_bug.cgi?id=179154

        Reviewed by Carlos Garcia Campos.

        This commit just reduces some CMake code duplication between GTK and WPE.

        * Source/PlatformGTK.cmake:
        * Source/PlatformWPE.cmake:
        * Source/cmake/WebKitDist.cmake: Added.

2017-11-02  Tim Horton  <timothy_horton@apple.com>

        Reduce duplication in the toplevel Makefile
        https://bugs.webkit.org/show_bug.cgi?id=179204

        Unreviewed build fix.

        * Source/Makefile:
        Take three. An empty SDKROOT should be like Mac (and build all the things).

2017-11-02  Tim Horton  <timothy_horton@apple.com>

        Reduce duplication in the toplevel Makefile
        https://bugs.webkit.org/show_bug.cgi?id=179204

        * Source/Makefile:
        Address some post-landing review comments to keep the order of the MODULES correct.

2017-11-02  Tim Horton  <timothy_horton@apple.com>

        Reduce duplication in the toplevel Makefile
        https://bugs.webkit.org/show_bug.cgi?id=179204

        Reviewed by Simon Fraser.

        * Source/Makefile:
        Make MODULES additive instead of completely repeated, and only build
        libwebrtc where it's needed.

2017-11-02  Alberto Garcia  <berto@igalia.com>

        Unreviewed, fix typos in library names for the GTK+ port.

        * Source/cmake/OptionsGTK.cmake:

2017-10-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.19.1 release.
