@@ -1,5 +1,14 @@
 2017-11-06  Michael Catanzaro  <mcatanzaro@igalia.com>
 
+        [WPE] Clean up OptionsWPE.cmake
+        https://bugs.webkit.org/show_bug.cgi?id=179009
+
+        Reviewed by Žan Doberšek.
+
+        * Source/cmake/OptionsWPE.cmake:
+
+2017-11-06  Michael Catanzaro  <mcatanzaro@igalia.com>
+
         [WPE][GTK] Always use SET_AND_EXPOSE_TO_BUILD to set build variables
         https://bugs.webkit.org/show_bug.cgi?id=179038
 
